# Kea_SD22W_System_Integration_2022_Autumn

0._Miscellaneous/: getgooglehomepage.sh
1._file_types/: me  me.csv  me.json  me.xml  me.yaml
10._HTML/: index.html
10._HTML/node/: app.js  package-lock.json
10._HTML/python/: pyproject.toml
11._WebSockets/node/: app.js
11._WebSockets/node/public/: index.html
11._WebSockets/node_plain_websockets/: index.html  package-lock.json  server.js
2._modules/node/: app.js  package.json
2._modules/node/public/: duck.html  motherDuck.js
2._modules/python/libs/: LibraryB.py
3._pythonenvironments/pipenv/: main.py
5._FastAPI/: main.py  pyproject.toml
6._Environment_Variables/node/: main.js
6._Environment_Variables/python/: main.py  pyproject.toml
7._REST_API_Docs/: package-lock.json
7._REST_API_Docs/express_swagger/routers/: users.js
9._Server-sent/: app.js  package-lock.json  package.json
9._Server-sent/public/: index.html
Homework/1_File formats bonanza/: exercise.txt
Homework/1_File formats bonanza/files/: car.csv
Homework/1_File formats bonanza/java/: pom.xml
Homework/1_File formats bonanza/node/: app.js  package-lock.json  package.json
Homework/2_Data format translation servers - Part 1/: exercise.txt
Homework/2_Data format translation servers - Part 1/files/: car  car.csv  car.json  car.yaml
Homework/2_Data format translation servers - Part 1/java/: pom.xml
Homework/3_Date Servers - Part I/: exercise.txt
Homework/4_REST API documentation/: exercise.txt
Homework/5_Date Servers - Part II/: exercise.txt
(+26 files in other folders)
