[tool.poetry]
name = "5._fastapi"
version = "0.1.0"
description = ""
authors = ["BenjiHasCode <57215161+BenjiHasCode@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.81.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
